test_src/compiler_errors/types/binary/RightShiftBoolError3.b
class RightShiftBoolError3 {
    void test() {
        var value = 42;
        println(value >>= false);
    }
}
